--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jsdom": "^21.1.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
+    "vite-plugin-pwa": "^0.15.1",
     "vitest": "^0.29.2",
     "vue-tsc": "^1.0.24"
   },
