--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "cardice",
-  "private": true,
   "version": "0.0.1",
-  "type": "module",
+  "private": true,
+  "description": "An Ionic project",
   "scripts": {
-    "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "test:e2e": "cypress run",
     "test:unit": "vitest",
-    "lint": "eslint"
+    "test:e2e": "cypress run",
+    "lint": "eslint",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@capacitor/app": "5.0.2",
@@ -20,6 +20,7 @@
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "ionicons": "^7.0.0",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -28,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.0",
     "cypress": "^12.7.0",
@@ -44,5 +46,5 @@
     "vitest": "^0.29.2",
     "vue-tsc": "^1.0.24"
   },
-  "description": "An Ionic project"
+  "type": "module"
 }
